2007-11-09  Ian Turner <ian@zmanda.com>
	* server-src/taperscan.c: Fix a memory allocation bug and be a little
	  more paranoid.

2007-11-06  Ian Turner <ian@zmada.com>
	* server-src/taperscan.c: Print a proper message if there is
	  only one flag from device_read_label().

2007-11-26  Dustin J. Mitchell <dustin@zmanda.com>
	* configure.in config/amanda/config.m4 common-src/genversion.c
	  common-src/Makefile.am: explicitly generate svn info at configure
	  time, rather than relying on svn keywords

2007-11-26  Ian Turner <ian@zmanda.com>
	* server-src/Makefile.am: Move amdevcheck from libexec/ to sbin/.
	  Thanks to Satya Ganga <gsat@zmanda.com> for noticing this problem.
	
2007-11-26  John Franks <jrfranks@zmanda.com>
	* common-src/debug.c	For cygwin builds: change to
	  close and reopen log file handle on successful rename.
	  This is to ensure that Windows has no possibility of
	  preventing access to the original file name if processes
	  collide.
		
2007-11-23  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/amflush.c: Send config option (-o) to child process.

2007-11-23  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/planner.c: Don't set est(dp)->state before testing it.

2007-11-23  Jean-Louis Martineau <martineau@zmanda.com>
	* config/amanda/readline.m4: Include termcap, curses or ncurese in LIBS.

2007-11-23  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/diskfile.c (match_disklist): Fix for disk not found.

2007-11-23  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/driver.c: Don't release taper_ev_read in
                               start_degraded_mode.

2007-11-20  Paddy Sreenivasan <paddy@zmanda.com>
        * amanda.spec: Added calls to Zmanda
	* example/amanda-client.conf.in: Switch to bsdtcp

2007-11-14  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/amstatus.pl: Handle taper FAILED message.

2007-11-14  Jean-Louis Martineau <martineau@zmanda.com>